--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,14 +1,15 @@
-<div class="col s12 m3">
-  <div class="card">
+<div class="col s12 m3" >
+  <div class="card" appHover>
     <div class="card-image">
-      <img src="https://materializecss.com/images/sample-1.jpg">
-      <span class="card-title">{{user.name}}</span>
+      <img src="{{user['picture']['large']}}">
     </div>
-    <div class="card-content">
-      <p>{{user.description}}</p>
+    <div class="card-content" [ngClass]="{'marked' : isMark}">
+      <p>{{user['name']['title']}} {{user['name']['first']}} {{user['name']['last']}}</p>
     </div>
     <div class="card-action">
-      <a href="#">This is a link</a>
+      <a
+        (click)="change()"
+        href="#" class="waves-effect waves-light btn">Узнать больше!</a>
     </div>
   </div>
 </div>
